--- a/pact.cabal
+++ b/pact.cabal
@@ -101,10 +101,12 @@ library
     Pact.Types.Version
     Pact.Types.Typecheck
     Pact.Typechecker
-    Pact.Core.Typed.Term
     Pact.Core.Builtin
     Pact.Core.Names
     Pact.Core.Type
+    Pact.Core.Typed.Typecheck
+    Pact.Core.Typed.Term
+    Pact.Core.IR.Term
   build-depends:
     , Decimal >= 0.4.2 && < 0.6
     , QuickCheck >= 2.12.6.1
