--- a/pact.cabal
+++ b/pact.cabal
@@ -107,6 +107,8 @@ library
     Pact.Core.Typed.Typecheck
     Pact.Core.Typed.Term
     Pact.Core.IR.Term
+    Pact.Core.IR.Typecheck
+    Pact.Core.IR.Typecheck.Assumption
   build-depends:
     , Decimal >= 0.4.2 && < 0.6
     , QuickCheck >= 2.12.6.1
